# med-ai-model-covid

./: Dockerfile  build.sh  evaluate.py  main.py  normal_stats  preprocess.py  pyproject.toml
