[tool.poetry]
name = "med-ai-cxr-classifier"
version = "0.1.0"
description = ""
authors = ["Travis <travisjonathanclarke@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
numpy = "^1.18.5"
pydicom = "^2.0.0"
fastai = "^1.0.61"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pylint = "^2.5.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
